# Pink-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.pip_packages/aio_pika-9.6.2.dist-info/: RECORD
.pip_packages/httpx-0.28.1.dist-info/: RECORD
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/schemas/: __init__.py  audit_request.py  chat_request.py  chat_response.py  rag_request.py  user_instruction_request.py
app/api/v1/: __init__.py  agent.py  health.py  rag.py  user_instruction.py
app/config/: __init__.py  agent_config.py  llm_config.py  mcp.yaml  settings.py
app/core/: __init__.py
app/core/agent/: __init__.py  engine.py
app/core/agent/graph/: __init__.py  state.py
app/core/agent/prompts/: __init__.py  agent_prompt.py
app/core/llm/: __init__.py  service.py
app/core/memory/: __init__.py  loader.py  shortmem.py  user_instruction.py
app/core/memory/checkpoint/: __init__.py  (+1 more)
app/core/orchestrator/: __init__.py  graph.py  memory.py  prompts.py  schemas.py  simple_agent.py  state.py  utils.py
app/core/rag/: __init__.py  chunker.py  embedder.py  engine.py  git_loader.py  query_rewriter.py  reranker.py  retrieval_store.py  retriever.py  schemas.py
app/infrastructure/: __init__.py  db_client.py  db_service.py  mq_client.py  mq_publisher.py  redis_client.py  redis_service.py  resources.py
app/models/: __init__.py  base.py  factory.py
app/models/providers/: __init__.py  openai_compat.py
app/tools/: __init__.py  base.py  registry.py
app/tools/mcp/: __init__.py  adapter.py  client.py  config.py  manager.py
app/utils/: __init__.py  logger.py  retry.py  sse.py  trace.py
scripts/: dev_server.py  init_db.py
tests/: conftest.py
tests/integration/: test_chat_stream.py
tests/unit/: test_agent_graph.py  test_memory.py  test_rag_pipeline.py
(+18 files in other folders)
