[project]
name = "ai-agent-engine"
version = "1.0.0"
description = "AI Agent Engine - Python backend for multi-step reasoning agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pink", email = "pinxiang9527@gmail.com" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-mcp-adapters>=0.0.1",
    "langchain-postgres>=0.1.0",
    
    "pgvector>=0.3.0",
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.30.0",
    
    "sentence-transformers>=3.0.0",
    
    "tiktoken>=0.8.0",
    "unstructured>=0.16.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.12",
    
    "redis>=5.2.0",
    "aio-pika>=9.4.0",
    
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
